<resources>

    <string name="login">Login</string>
    <string name="remember_me">Remember me</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="sign_in">SIGN IN</string>
    <string name="welcome_to_syfc">Welcome back to SYFC!</string>
    <string name="username1">Username:</string>
    <string name="password1">Password:</string>


    <string name="app_name">Student Booking</string>
    <string name="group">Instructor</string>
    <string name="gp">Instructor:</string>
    <string name="mobile_number">Student ID</string>
    <string name="mobile_number1">Student ID:</string>
    <string name="name">Name</string>
    <string name="name1">Name:</string>
    <string name="confirm">CONFIRM</string>
    <string name="class_booking">BOOKING</string>
    <string name="home">HOME</string>
    <string name="booking_c">booking status</string>
    <string name="logout">LOGOUT</string>
    <string name="view_calendar">CALENDAR</string>
    <string name="booking_classes">BOOKING</string>
    <string name="singapore_youth_flying_club">Singapore Youth Flying Club</string>
    <string name="vision">Our Vision</string>
    <string name="vision_text">To be a world class aviation training centre for youths.</string>
    <string name="our_core_values">Our Core Values</string>
    <string name="core_1">Safety Always</string>
    <string name="core_2">Focus on Team Excellence</string>
    <string name="core_3">Continuous Learning and Innovation</string>
    <string name="core_4">Care for Staff and Students</string>
    <string name="core_5">Youth-Centric</string>
    <string name="our_mission">Our Mission</string>
    <string name="mission_1">To promote aviation and inculcate a strong passion for flying among our youths.</string>
    <string name="contact">Contact an Instructor</string>
    <string name="syfc_website">Go to the SYFC website</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="email">Email</string>
    <string name="delete_a_booking">DELETE A BOOKING</string>
    <string name="mobileno">Mobile No</string>
    <string name="message">Message</string>
    <string name="mt">Medium Text</string>
    <string name="textview">TextView</string>
    <string name="pending_statuses">PENDING STATUSES</string>
    <string name="sms">SMS</string>
    <string name="mobile_no1">Mobile No</string>
    <string name="send_sms">Send SMS</string>
    <string name="date12">Date</string>
    <string name="time12">Time</string>


</resources>
