<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonBooking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/darkBlue"
            android:text="@string/booking_classes" />

        <Button
            android:id="@+id/buttonStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/darkBlue"
            android:text="@string/booking_c" />

        <Button
            android:id="@+id/buttonCalendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/darkBlue"
            android:text="@string/view_calendar" />

        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/darkBlue"
            android:text="@string/logout" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewHeadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/singapore_youth_flying_club"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@color/blue" />

    <TextView
        android:id="@+id/textViewVision"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/vision"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@color/blue" />

    <TextView
        android:id="@+id/textViewVision1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/vision_text" />

    <TextView
        android:id="@+id/textViewCore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/our_core_values"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@color/blue" />

    <TextView
        android:id="@+id/textViewCore1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/core_1" />
    <TextView
        android:id="@+id/textViewCore2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/core_2" />
    <TextView
        android:id="@+id/textViewCore3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/core_3" />
    <TextView
        android:id="@+id/textViewCore4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/core_4" />
    <TextView
        android:id="@+id/textViewCore5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/core_5" />

    <TextView
        android:id="@+id/textViewMission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/our_mission"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@color/blue" />

    <TextView
        android:id="@+id/textViewMission1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/mission_1" />

    <Button
        android:id="@+id/buttonLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/Green"
        android:text="@string/syfc_website" />

</LinearLayout>
