<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/darkBlue"
                    android:text="@string/home" />

                <Button
                    android:id="@+id/buttonStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/darkBlue"
                    android:text="@string/booking_c" />

                <Button
                    android:id="@+id/buttonCalendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/darkBlue"
                    android:text="@string/view_calendar" />

                <Button
                    android:id="@+id/buttonLogout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/darkBlue"
                    android:text="@string/logout" />
            </LinearLayout>

            <TextView
                android:id="@+id/bookingView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/class_booking"
                android:textColor="@color/blue"
                android:textAppearance="@android:style/TextAppearance.Large" />


            <TextView
                android:id="@+id/textViewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name1"
                android:textColor="@color/blue"
                android:textAppearance="@android:style/TextAppearance.Large" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textViewMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mobile_number1"
                android:textColor="@color/blue"
                android:textAppearance="@android:style/TextAppearance.Large" />

            <EditText
                android:id="@+id/editTextMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:hint="@string/mobile_number" />

            <TextView
                android:id="@+id/textViewGrpSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gp"
                android:textColor="@color/blue"
                android:textAppearance="@android:style/TextAppearance.Large" />

            <EditText
                android:id="@+id/editTextGrpSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/group"
                android:inputType="textPersonName" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false" />

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <Button
                android:id="@+id/buttoncfrm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
